[tool.poetry]
name = "abm-initialization-collection"
version = "0.1.0"
description = "Collection of tasks for initializing abm simulations."
authors = [
    "Jessica S. Yu <jesyu@uw.edu>"
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.6.0"
numpy = "^1.23.4"
pandas = "^1.5.1"
matplotlib = "^3.6.1"
hexalattice = "^1.2.1"
aicsimageio = "^4.9.2"
scikit-image = "^0.19.3"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.8.0"
pylint = "^2.15.2"
tox = "^3.26.0"
pytest = "^7.2.0"
pytest-cov = "^3.0.0"
pytest-subtests = "^0.8.0"
Sphinx = "^5.1.1"
mypy = "^0.971"
sphinx-rtd-theme = "^1.0.0"
sphinx_mdinclude = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
