[tool.poetry]
name = "abm-initialization-collection"
version = "0.2.2"
description = "Collection of tasks for initializing abm simulations."
authors = [
    "Jessica S. Yu <jesyu@uw.edu>"
]
license = "BSD-3-Clause"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
prefect = "^2.8.2"
numpy = "^1.24.2"
pandas = "^1.5.3"
matplotlib = "^3.7.0"
hexalattice = "^1.2.1"
aicsimageio = "^4.9.4"
scikit-image = "^0.19.3"
scipy = "^1.9.3"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.12.0"
mypy = "^0.971"
pylint = "^2.16.2"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
pytest-subtests = "^0.8.0"
Sphinx = "^5.3.0"
sphinx-rtd-theme = "^1.2.0"
sphinx_mdinclude = "^0.5.3"
tox = "^3.26.0"

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
